src/objects/Procedure__c.object
<CustomObject>
    <description>The list of all the procedures in the system.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doctor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Doctor</label>
        <referenceTo>Medical_Professional__c</referenceTo>
        <relationshipLabel>Procedures</relationshipLabel>
        <relationshipName>Procedures</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>What Hospital, facility provides this Procedure.</description>
        <label>Facility</label>
        <referenceTo>Medical_Facility__c</referenceTo>
        <relationshipLabel>Procedures</relationshipLabel>
        <relationshipName>Procedures</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hospital_Nights_Required__c</fullName>
        <label>Hospital Nights Required</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hotel_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hotel Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Op_Instruction__c</fullName>
        <label>Post-Op Instruction</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Op_Instruction__c</fullName>
        <label>Pre-Op Instruction</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Procedure_Category__c</fullName>
        <label>Procedure Category</label>
        <picklist>
            <picklistValues>
                <fullName>Cardiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetic/Plastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dentistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnostic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gastroenterology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IVF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kidney Dialysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obstetrics/Gynecology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opthalmology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organ Tranplant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthopedic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Podiatry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spinal Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stem Cell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wellness</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Procedure_Code__c</fullName>
        <externalId>true</externalId>
        <label>Procedure Code</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Recovery_Nights_Required__c</fullName>
        <label>Recovery Nights Required</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transportation_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transportation Included</label>
        <type>Checkbox</type>
    </fields>
    <label>Procedure</label>
    <nameField>
        <label>Procedure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Procedures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>